tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier6LuV-AAAAAAAAAAAAAAAAAAAACA==__FluidTPforMagicH-AAAAAAAAAAAAAAAAAAAGVQ==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1621,
  "prerequisites": [
    1490
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Hate magic (and fluid P2P), but still want to TP fluids? TT has your back with the Ender Fluid Link Cover!\n\nPlace one on a tank and open the GUI.\nChannel: Covers with the same text will connect.\n\nPublic: Links to any of the same color not set to private. Use an internet program to find out what the numbers mean, and get colors you like.\nPrivate: Does not link to public version of that color. Meaningless in SP.\n\nImport: Exports from attached tank.\nExport: Send to attached tank.\n\nYou can use multiple as inputs and/or outputs. It runs at 8000L/t.\n\nYou can send §ofrom§r an output hatch or §oto§r an input hatch for multis. Probably won't work well for anything with multiple I/O, like a singleblock Chemical Reactor.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§c§lFluid TP for Magic-Haters",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1490
  ],
  "rewards": [],
  "tasks": []
}
