tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier6LuV-AAAAAAAAAAAAAAAAAAAACA==__FusionRocketry-AAAAAAAAAAAAAAAAAAAKVQ==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2645,
  "prerequisites": [
    1213,
    1726
  ],
  "properties": {
    "auto_claim": false,
    "desc": "So you completed your Fusion Reactor and made your rocket, great! Now time to get some new ore! (like that isn't getting old) You don't need your hand held anymore, so I'll just list what's new.\n\nEnceladus, Miranda, Oberon, Ross128ba and Titan are the new planets. Miranda is the 1st moon of Uranus, while Oberon is the last. Enceladus is the 2nd moon of Saturn, while Titan is the second last. Ross128ba is Ross128b's moon in the Ross128 System to the South.\n\nThe new veins are Nickel, Tungsten, and Vanadium. The ores are: Chrome, Deep Iron, Iridium, Gold, Magnetite, Nickel, Osmium, Silicon, Shadow Iron, Tungsten, and Vanadium.\n\nYou can get Neutronium from small ores on Enceladus, Oberon, and Titan.\n\nAnd grab some planet blocks while you're at it too.\n\nYou can get the schematic for T6 on Enceladus.\n\n[note]I'm sure you can tell by now, but it's not like every planet is required, so go to the ones you want to, and skip the ones you don't want to go to. Use NEI to figure out where you NEED to go.[/note]",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§c§lFusion Rocketry",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1213,
    1726
  ],
  "rewards": [],
  "tasks": []
}
