tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier6LuV-AAAAAAAAAAAAAAAAAAAACA==__HotNetheriteScra-8zpQos1hR1CbwmWldvxSpg==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 14799188261435364006,
  "prerequisites": [
    1979981515953147306
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Heating up the Netherite Scrap is a rather quick and cheap process; simply throwing it in the §5§lChemical Bath§r with a little lava ought to do the trick! \n\nBear in mind though, you will be re-heating this scrap many times over so it's definitely recommended to have a substantial supply of lava to be able to pull from. ",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§c§lHot Netherite Scrap",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1979981515953147306
  ],
  "rewards": [],
  "tasks": []
}
