tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier6LuV-AAAAAAAAAAAAAAAAAAAACA==__ImprintsTheyreIm-AAAAAAAAAAAAAAAAAAAKKg==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2602,
  "prerequisites": [
    2606
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Now that you've finally gotten all the materials to make your imprints, you can make them as you get your new circuits. You'll need to slice the circuits for the imprint in either a tier-appropriate slicing machine, or the Cutting Factory in slicing mode.\n\nTo use the imprints, place them in the CAL controller's item slot. The CAL will be imprinted once you turn it on. You can see what it's imprinted with by using a portable scanner on the controller. You can also swap out controllers if you're too lazy to make more CALs.\n\n[note]If you already have an imprint for an earlier version of a recipe, you don't need to make another, it works with both recipes.[/note]",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§c§lImprints, They're Important",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    2606
  ],
  "rewards": [],
  "tasks": []
}
