tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier6LuV-AAAAAAAAAAAAAAAAAAAACA==__IntenselyBondedN-zb1nbwNuSFKuSEyW3mVj-Q==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 247214550307660793,
  "prerequisites": [
    2171092528035989239,
    18076117176668017811,
    2607
  ],
  "properties": {
    "auto_claim": false,
    "desc": "At long last... the final ingredient needed before making Netherite materials.\n\nThrough the combination of the Netherite Nanoparticles and Hellish Metal in the §5§lEBF§r, you can create §4Intensely Bonded Netherite Nanoparticles.§r As an added bonus for those who have invested in bees, using the combs from a Netherite Queen, will reward you with §2§l2x§r the product.\n\nThese are not only the primary pre-requisite ingredients for the Dense Netherite Plate that you need for the §3§lFusion Reactor§r, but also the pre-requisite material for making the rest of the Netherite parts after you have created one; so be sure to stockpile and manufacture as many of these nanoparticles as you can. \n\n[note]Keep in mind this recipe does require Naquadah coils![/note]",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§c§lIntensely Bonded Netherite Nanoparticles",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    2171092528035989239,
    18076117176668017811,
    2607
  ],
  "rewards": [],
  "tasks": []
}
