tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier6LuV-AAAAAAAAAAAAAAAAAAAACA==__KingofAcid-AAAAAAAAAAAAAAAAAAALbw==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2927,
  "prerequisites": [
    2926
  ],
  "properties": {
    "auto_claim": false,
    "desc": "This is the fluoroantimonic acid, the strongest acid in the world currently. It can dissolve almost everything on earth, so it is the best choice to dissolve our NOM dust.\n\nOf course there are some things the fluoroantimonic acid can't deal with, like the \"Empty Cell\". x)",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§c§lKing of Acid",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    2926
  ],
  "rewards": [],
  "tasks": []
}
