tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier6LuV-AAAAAAAAAAAAAAAAAAAACA==__LuVAssembler-AAAAAAAAAAAAAAAAAAAGug==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1722,
  "prerequisites": [
    1489
  ],
  "properties": {
    "auto_claim": false,
    "desc": "The LuV assembler is needed for IV Solar Panels and other high tier stuff. Let's build one.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§c§lLuV Assembler",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1489
  ],
  "rewards": [],
  "tasks": []
}
